--- a/node-mud/package.json
+++ b/node-mud/package.json
@@ -3,8 +3,10 @@
   "version": "1.0.0",
   "description": "a node version of the original Diku Merc_21 MUD",
   "main": "server.js",
+  "type": "module",
   "scripts": {
     "build": "tsc",
+    "lint": "eslint ./**/*.ts ./**/*.tsx --fix",
     "start": "node dist/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -19,10 +21,17 @@
   },
   "homepage": "https://github.com/dave-ops/project-mud#readme",
   "devDependencies": {
+    "@eslint/eslintrc": "^3.2.0",
+    "@eslint/js": "^9.16.0",
     "@types/express": "^5.0.0",
     "@types/node": "^22.10.1",
+    "@typescript-eslint/eslint-plugin": "^8.17.0",
+    "@typescript-eslint/parser": "^8.17.0",
+    "eslint": "^9.16.0",
     "express": "^4.21.1",
+    "globals": "^15.13.0",
     "touch-cli": "^0.0.1",
-    "typescript": "^5.7.2"
+    "typescript": "^5.7.2",
+    "typescript-eslint": "^8.17.0"
   }
 }
