--- a/node-mud/package.json
+++ b/node-mud/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "build": "tsc",
-    "lint": "eslint src/*.ts src/**/*.ts --fix",
+    "lint": "eslint src/*.ts src/**/*.ts etls/*.ts --fix",
     "start": "node dist/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
