--- a/convesion_tools/package.json
+++ b/convesion_tools/package.json
@@ -6,7 +6,7 @@
     "typescript": "^5.7.2"
   },
   "scripts": {
-    "convert-area": "tsc convertArea.ts"
+    "build": "tsc"
   },
   "author": "",
   "license": "ISC",
