--- a/node-mud-2/package.json
+++ b/node-mud-2/package.json
@@ -1,6 +1,5 @@
 {
-  "name": "rockmud",
-  "subdomain": "rockmud.heroku",
+  "name": "node-mud",
   "dependencies": {
     "ws": "^7.3.1"
   },
@@ -10,23 +9,7 @@
   },
   "description": "JavaScript WebSocket MUD server",
   "main": "server.js",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/MoreOutput/RockMUD.git"
-  },
-  "keywords": [
-    "websockets",
-    "mud",
-    "text game",
-    "javascript mmo",
-    "game"
-  ],
-  "author": "MoreOutput",
   "license": "MIT",
-  "bugs": {
-    "url": "https://github.com/MoreOutput/RockMUD/issues"
-  },
-  "homepage": "https://github.com/MoreOutput/RockMUD",
   "devDependencies": {
     "istanbul": "^0.4.5",
     "jasmine": "^3.6.0",
