--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,5 @@
 # node
 node_modules/
-dist/
-build/
-*.js
-*.js.map
-*.d.ts
 
 # Logs
 logs
@@ -13,30 +8,9 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# Runtime data
-pids
-*.pid
-*.seed
-
-# Dependency directories
-jspm_packages/
-
-# IDEs and editors
-.vscode/
-.idea/
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
-
-# OS generated files
-.DS_Store
-Thumbs.db
-
-# Yarn
-.yarn/
-.yarn-integrity
+# merges
+*.orig
+*.bak
 
 # Other
 coverage/
